src/snapshots/zeek_language_server__lsp__test__code_action.snap
---
source: src/lsp.rs
expression: "server.code_action(CodeActionParams\n{\n    text_document: TextDocumentIdentifier::new(text_document_uri), range:\n    Range::new(Position::new(0, 1), Position::new(0, 2)), context,\n    work_done_progress_params: WorkDoneProgressParams::default(),\n    partial_result_params: PartialResultParams::default(),\n}).await"
---
Ok(
    Some(
        [
            CodeAction(
                CodeAction {
                    title: "Insert missing ';'",
                    kind: Some(
                        CodeActionKind(
                            "quickfix",
                        ),
                    ),
                    diagnostics: None,
                    edit: Some(
                        WorkspaceEdit {
                            changes: Some(
                                {
                                    Uri(
                                        Uri {
                                            scheme: "file",
                                            authority: Some(
                                                Authority {
                                                    userinfo: None,
                                                    host: "",
                                                    host_parsed: RegName(
                                                        "",
                                                    ),
                                                    port: None,
                                                },
                                            ),
                                            path: "/x.zeek",
                                            query: None,
                                            fragment: None,
                                        },
                                    ): [
                                        TextEdit {
                                            range: Range {
                                                start: Position {
                                                    line: 0,
                                                    character: 13,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    character: 13,
                                                },
                                            },
                                            new_text: ";",
                                        },
                                    ],
                                },
                            ),
                            document_changes: None,
                            change_annotations: None,
                        },
                    ),
                    command: None,
                    is_preferred: None,
                    disabled: None,
                    data: None,
                },
            ),
        ],
    ),
)
