src/snapshots/zeek_language_server__lsp__test__goto_definition.snap
---
source: src/lsp.rs
expression: "server.goto_definition(super::GotoDefinitionParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri.clone()),\n    Position::new(3, 8),), partial_result_params:\n    PartialResultParams::default(), work_done_progress_params:\n    WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        Scalar(
            Location {
                uri: Uri(
                    Uri {
                        scheme: Some(
                            "file",
                        ),
                        authority: Some(
                            Authority {
                                userinfo: None,
                                host: Host {
                                    text: "",
                                    data: RegName(
                                        "",
                                    ),
                                },
                                port: None,
                            },
                        ),
                        path: "/x.zeek",
                        query: None,
                        fragment: None,
                    },
                ),
                range: Range {
                    start: Position {
                        line: 2,
                        character: 0,
                    },
                    end: Position {
                        line: 2,
                        character: 29,
                    },
                },
            },
        ),
    ),
)
