src/snapshots/zeek_language_server__lsp__test__hover_definition-2.snap
---
source: src/lsp.rs
expression: "server.hover(HoverParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri.clone()),\n    Position::new(10, 15),), work_done_progress_params:\n    WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    String(
                        "### event `zeek_init`",
                    ),
                    String(
                        "Type: `event()`",
                    ),
                    String(
                        "Declaration.\n* * *\n```zeek\nglobal zeek_init: event();\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 10,
                        character: 14,
                    },
                    end: Position {
                        line: 10,
                        character: 23,
                    },
                },
            ),
        },
    ),
)
