src/snapshots/zeek_language_server__lsp__test__hover_definition-3.snap
---
source: src/lsp.rs
expression: "server.hover(HoverParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri),\n    Position::new(13, 15),), work_done_progress_params:\n    WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    String(
                        "### event `bar`",
                    ),
                    String(
                        "Declaration & definition.\n* * *\n```zeek\nevent bar() {}\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 13,
                        character: 14,
                    },
                    end: Position {
                        line: 13,
                        character: 17,
                    },
                },
            ),
        },
    ),
)
