src/snapshots/zeek_language_server__lsp__test__hover_definition.snap
---
source: src/lsp.rs
expression: "server.hover(HoverParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri.clone()),\n    Position::new(7, 15),), work_done_progress_params:\n    WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    String(
                        "### event `foo`",
                    ),
                    String(
                        "Type: `event()`",
                    ),
                    String(
                        "Declaration.\n* * *\n```zeek\nglobal foo: event();\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 7,
                        character: 14,
                    },
                    end: Position {
                        line: 7,
                        character: 17,
                    },
                },
            ),
        },
    ),
)
