src/snapshots/zeek_language_server__lsp__test__hover_in_decl_fqid-2.snap
---
source: src/lsp.rs
assertion_line: 2704
expression: "server.hover(HoverParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri.clone()),\n    Position::new(3, 15)), work_done_progress_params:\n    WorkDoneProgressParams::default()\n}).await"
---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    String(
                        "### constant `foo::X`",
                    ),
                    String(
                        "Type: `count`",
                    ),
                    String(
                        "```zeek\nconst X = 47;\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 3,
                        character: 15,
                    },
                    end: Position {
                        line: 3,
                        character: 16,
                    },
                },
            ),
        },
    ),
)
