src/snapshots/zeek_language_server__lsp__test__hover_in_decl_fqid-3.snap
---
source: src/lsp.rs
assertion_line: 2716
expression: "server.hover(HoverParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri.clone()),\n    Position::new(4, 6)), work_done_progress_params:\n    WorkDoneProgressParams::default()\n}).await"
---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    String(
                        "### constant `foo::Y`",
                    ),
                    String(
                        "Type: `count`",
                    ),
                    String(
                        "```zeek\nconst Y = 11;\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 4,
                        character: 6,
                    },
                    end: Position {
                        line: 4,
                        character: 7,
                    },
                },
            ),
        },
    ),
)
