src/snapshots/zeek_language_server__lsp__test__hover_in_decl_fqid-4.snap
---
source: src/lsp.rs
expression: "server.hover(HoverParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri),\n    Position::new(7, 7)), work_done_progress_params:\n    WorkDoneProgressParams::default()\n}).await"
---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    String(
                        "### global `foo::r`",
                    ),
                    String(
                        "Type: `foo::R`",
                    ),
                    String(
                        "```zeek\nglobal r: R;\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 7,
                        character: 7,
                    },
                    end: Position {
                        line: 7,
                        character: 8,
                    },
                },
            ),
        },
    ),
)
