src/snapshots/zeek_language_server__lsp__test__hover_in_decl_fqid.snap
---
source: src/lsp.rs
assertion_line: 2692
expression: "server.hover(HoverParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri.clone()),\n    Position::new(1, 15)), work_done_progress_params:\n    WorkDoneProgressParams::default()\n}).await"
---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    String(
                        "### constant `G`",
                    ),
                    String(
                        "Type: `count`",
                    ),
                    String(
                        "```zeek\nconst G = 42;\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 1,
                        character: 15,
                    },
                    end: Position {
                        line: 1,
                        character: 16,
                    },
                },
            ),
        },
    ),
)
