src/snapshots/zeek_language_server__lsp__test__hover_record_initializer-2.snap
---
source: src/lsp.rs
expression: "server.hover(HoverParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri.clone()),\n    Position::new(8, 27),), work_done_progress_params:\n    WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    String(
                        "### field `X::xa`",
                    ),
                    String(
                        "Type: `count`",
                    ),
                    String(
                        "```zeek\n# In X\nxa: count;\n```",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 8,
                        character: 27,
                    },
                    end: Position {
                        line: 8,
                        character: 29,
                    },
                },
            ),
        },
    ),
)
